@@ -1386,7 +1386,8 @@ xvc_create_pref_dialog (XVC_AppData * lapp)
                                             (auto_is_active
 /*                                             || mf_t_codec >=
                                              xvc_formats[mf_t_format].
-                                             num_allowed_vid_codecs */ ?
+                                             num_allowed_vid_codecs */
+                                             ?
                                              xvc_formats[mf_t_format].
                                              def_vid_codec : mf_t_codec));
             if (found >= 0)
